# near-sequencer-demo

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
artifacts/: comparative.md
artifacts/mainnet/: deploys.json  report.md
artifacts/testnet/: deploys.json  report.md
contracts/counter/: Cargo.toml
contracts/recipes/: Cargo.toml
docs/: intents-near.md  invariants.md  mainnet-readiness.md  verification.md  volume-2-intents.md
scripts/: demo.sh  package.json  tsconfig.json  verify-round-trip.sh
scripts/src/: accounts.ts  aggregate.ts  audit.ts  capture.ts  comparative.ts  config.ts  demo.ts  env.ts  explain-dag.ts  report.ts  rpc.ts  tx.ts  (+2 more)
viz/: DESIGN.md  Makefile  README.md  pyproject.toml  requirements.txt
viz/common/: ATTRIBUTION.md  __init__.py  background.py  blooms.py  legend.py  palette.py  satellite.py  sphere.py  teach.py  timeline.py  typography.py
viz/data/: recipe-basic-live-01.json  recipe-basic-live-02.json  recipe-basic-live-03.json  recipe-basic-synthetic.json  recipe-chained-live-01.json  recipe-chained-live-02.json  recipe-chained-live-03.json  recipe-chained-synthetic.json  recipe-handoff-claim-live-01.json  recipe-handoff-claim-live-02.json  recipe-handoff-claim-synthetic.json  recipe-handoff-timeout-live-01.json  recipe-handoff-timeout-synthetic.json  recipe-timeout-live-01.json  recipe-timeout-synthetic.json
viz/scenes/: recipe_basic.py  recipe_chained.py  recipe_handoff.py  recipe_timeout.py
viz/scripts/: onchain-to-timeline.mjs  storyboard.sh
(+77 files in other folders)
