[project]
name = "near-sequencer-demo-viz"
version = "0.1.0"
description = "Manim scenes that animate the 'silent value' thesis from the sibling near-sequencer-demo Rust workspace."
requires-python = ">=3.10"
dependencies = [
  "manim>=0.20.1",
  "numpy>=1.24",
]

# Shared primitives (viz/common/) are vendored from
# ../../manim-visualizations; see viz/common/ATTRIBUTION.md for the
# source and re-sync instructions.
